feat: 项目结构变更和路径调整。

--- a/aio-backend/aio-web/src/main/resources/application.properties
+++ b/aio-backend/aio-web/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 #应用名称
-spring.application.name=demo
+spring.application.name=aio
 
 #应用服务 WEB 访问端口
 server.port=9090
+#是否开启调试模式，生产环境下请关闭
+debug=true
+#应用服务 WEB 访问上下文
+server.servlet.context-path=/aio
 
 ################# h2database #################
-#console url。Spring启动后，可以访问 http://127.0.0.1:8080/h2-console 查看数据库
+#console url。Spring启动后，可以访问 http://127.0.0.1:9090/h2-console 查看数据库
 spring.h2.console.path=/h2-console
 #default true。咱也可以用命令行访问好数据库，感兴趣的同学点这个链接 http://www.h2database.com/html/tutorial.html?highlight=Mac&search=mac#firstFound
 spring.h2.console.enabled=true
