--- a/aio-backend/aio-web/src/main/resources/application.properties
+++ b/aio-backend/aio-web/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 #应用名称
 spring.application.name=aio
-
-#应用服务 WEB 访问端口
 server.port=9090
-#是否开启调试模式，生产环境下请关闭
 debug=true
-#应用服务 WEB 访问上下文
-server.servlet.context-path=/aio
 
 ################# h2database #################
 #console url。Spring启动后，可以访问 http://127.0.0.1:9090/h2-console 查看数据库
@@ -23,7 +18,7 @@ spring.datasource.schema=classpath:sql/ddl.sql
 ##插入数据的MySql语句的位置
 spring.datasource.data=classpath:sql/dml.sql
 #指定数据库的种类，这里file意思是文件型数据库
-spring.datasource.url=jdbc:h2:file:./demo
+spring.datasource.url=jdbc:h2:file:./aio
 #用户名密码不需要改，都是临时值
 spring.datasource.username=san
 spring.datasource.password=
