--- a/aio-backend/aio-manager/pom.xml
+++ b/aio-backend/aio-manager/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.kubernetes</groupId>
+            <artifactId>client-java</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
