--- a/aio-backend/pom.xml
+++ b/aio-backend/pom.xml
@@ -22,6 +22,7 @@
         <druid.version>1.2.6</druid.version>
         <swagger.version>3.0.0</swagger.version>
         <junit.version>4.12</junit.version>
+        <kubernetes.version>10.0.0</kubernetes.version>
     </properties>
 
     <modules>
@@ -150,6 +151,11 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.kubernetes</groupId>
+                <artifactId>client-java</artifactId>
+                <version>${kubernetes.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
