--- a/aio-backend/aio-manager/pom.xml
+++ b/aio-backend/aio-manager/pom.xml
@@ -30,6 +30,11 @@
             <groupId>io.kubernetes</groupId>
             <artifactId>client-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
