--- a/aio-backend/pom.xml
+++ b/aio-backend/pom.xml
@@ -23,6 +23,7 @@
         <swagger.version>3.0.0</swagger.version>
         <junit.version>4.12</junit.version>
         <kubernetes.version>10.0.0</kubernetes.version>
+        <spring.version>5.2.12.RELEASE</spring.version>
     </properties>
 
     <modules>
@@ -156,6 +157,12 @@
                 <groupId>io.kubernetes</groupId>
                 <artifactId>client-java</artifactId>
                 <version>${kubernetes.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
