feat: faas框架支持在一个容器里启动多个进程任务。

--- a/aio-faas/python-basic/cmd/aio-faas-python-basic/Dockerfile
+++ b/aio-faas/python-basic/cmd/aio-faas-python-basic/Dockerfile
@@ -1,18 +1,21 @@
-FROM shi0090/aio-scheduler-python-basic:1.0.0
+FROM shi0090/centos-7.9:python-3.6.8
 
-COPY /dist/aio_sdk-latest.tar.gz /tmp/aio_sdk-latest.tar.gz
+ENV AIO_SCHEDULER_WORK_DIR /home/admin/aio-scheduler
+ENV AIO_FAAS_PYTHON_WORK_DIR /home/admin/aio-faas/python-basic
+ENV AIO_FAAS_PYTHON_LOG_DIR /home/admin/logs/python-basic
+
 COPY requirements.txt /tmp/requirements.txt
-COPY *.py /home/admin/aio-faas/python-basic/
-COPY cmd/aio-faas-python-basic/start.sh /home/admin/aio-faas/python-basic/start.sh
+COPY dist/aio_sdk-latest.tar.gz /tmp/aio_sdk-latest.tar.gz
+COPY aio-scheduler/start.sh ${AIO_SCHEDULER_WORK_DIR}/
+COPY aio-scheduler/aio-scheduler ${AIO_SCHEDULER_WORK_DIR}/
+COPY aio-scheduler/conf/prod.ini ${AIO_SCHEDULER_WORK_DIR}/conf/
+COPY *.py ${AIO_FAAS_PYTHON_WORK_DIR}/
+COPY *.json ${AIO_FAAS_PYTHON_WORK_DIR}/
+COPY cmd/aio-faas-python-basic/start.sh ${AIO_FAAS_PYTHON_WORK_DIR}/start.sh
 
 RUN pip3 install /tmp/aio_sdk-latest.tar.gz  \
-    && pip3 install -r /tmp/requirements.txt -i https://pypi.doubanio.com/simple --trusted-host pypi.doubanio.com --no-cache-dir  \
+    && pip3 install -r /tmp/requirements.txt -i https://mirrors.aliyun.com/pypi/simple/ --trusted-host https://mirrors.aliyun.com --no-cache-dir  \
     && rm -rf /tmp/aio_sdk-latest.tar.gz \
     && rm -rf /tmp/requirements.txt
 
-ENV AIO_LOG_DIR /home/admin/logs
-ENV AIO_FAAS_PYTHON_WD /home/admin/aio-faas/python-basic
-
-EXPOSE 6000 6001
-
-CMD ["/bin/bash", "-c", "/home/admin/aio-scheduler/startsh"]
+CMD ["/bin/bash", "-c", "${AIO_SCHEDULER_WORK_DIR}/start.sh"]
