--- a/aio-scheduler/conf/prod.ini
+++ b/aio-scheduler/conf/prod.ini
@@ -1,7 +1,9 @@
 [self]
 logPath = /home/admin/logs
 workPath = /home/admin/aio-scheduler
-schedulerUrl = 0.0.0.0:6000
+schedulerHost = 0.0.0.0
+schedulerPort = 5000
 [faas]
 faasPath = /home/admin/aio-faas/python-basic
-faasUrl = 0.0.0.0:6001
+faasHost = 0.0.0.0
+faasPort = 6001
