--- a/aio-scheduler/conf/prod.ini
+++ b/aio-scheduler/conf/prod.ini
@@ -1,9 +1,8 @@
-[self]
-logPath = /home/admin/logs
-workPath = /home/admin/aio-scheduler
-schedulerHost = 0.0.0.0
-schedulerPort = 5000
-[faas]
-faasPath = /home/admin/aio-faas/python-basic
-faasHost = 0.0.0.0
-faasPort = 6001
+[AIO_SCHEDULER]
+LOG_PATH = /home/admin/logs
+HOST = 0.0.0.0
+PORT = 6000
+[AIO_FAAS]
+WORK_PATH = /home/admin/aio-faas/python-basic
+HOST = 0.0.0.0
+PORT = 6001
