fix：调通dag的部署

--- a/aio-scheduler/conf/dev.ini
+++ b/aio-scheduler/conf/dev.ini
@@ -1,9 +1,8 @@
-[self]
-logPath = logs
-workPath = ./
-schedulerHost = 0.0.0.0
-schedulerPort = 5000
-[faas]
-faasPath = ../aio-faas/python-basic
-faasHost = 0.0.0.0
-faasPort = 30001
+[AIO_SCHEDULER]
+LOG_PATH = logs
+HOST = 0.0.0.0
+PORT = 5000
+[AIO_FAAS]
+WORK_PATH = ../aio-faas/python-basic
+HOST = 0.0.0.0
+PORT = 30001
